z-index fixed for subnav dropdowns

--- a/wp-content/themes/ensign_custom/css/site.scss
+++ b/wp-content/themes/ensign_custom/css/site.scss
@@ -135,6 +135,7 @@ header {
 				top: 100%;
 				left: 0;
 				width: 250px;
+				z-index: 999;
 									
 				li {
 					a {
